Fix content overflow issue on smaller screens.

--- a/src/scss/portfolio_style.scss
+++ b/src/scss/portfolio_style.scss
@@ -174,6 +174,7 @@ body * {
 
 .header {
     min-height: 85px;
+    overflow: hidden;
 
     border-bottom: 2px solid $sd-gray;
     background-color: #fff;
@@ -181,6 +182,10 @@ body * {
     @include max($xsmall) {
         min-height: 0;
         text-align: center;
+    }
+
+    &.transition-end {
+        overflow: visible;
     }
 }
 
@@ -331,7 +336,8 @@ body * {
     }
 
     &-item {
-        width: $container-width / 4 - 15 * 2;
+        $horizontal-margin: 15px;
+        width: $container-width / 4 - $horizontal-margin * 2;
         height: 250px;
         margin: 10px 15px 20px;
         overflow: hidden;
@@ -371,15 +377,15 @@ body * {
         }
 
         @include max($big) {
-            width: 33.33333333%;
+            width: calc(100%/3 - #{$horizontal-margin} * 2);
         }
 
         @include max($medium) {
-            width: 50%;
+            width: calc(100%/2 - #{$horizontal-margin} * 2);
         }
 
         @include max($small2) {
-            width: 100%;
+            width: calc(100% - #{$horizontal-margin} * 2);
         }
     }
 }
@@ -841,7 +847,7 @@ em {
 .me {
     width: 180px;
     height: 180px;
-    margin-right: 20px;
+    margin-right: 30px;
     margin-bottom: 20px;
     border-radius: 4px;
     overflow: hidden;
